<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Spaceships</string>
    <string name="button_play">Play</string>
    <string name="button_store">Store</string>
    <string name="button_stats">Stats</string>
    <string name="equipped_bullet">EQUIPPED_BULLET</string>
    <string name="equipped_rocket">EQUIPPED_ROCKET</string>
    <string name="paused">Paused</string>
    <string name="resume">Resume</string>
    <string name="tap_to_resume">Tap to Resume</string>
    <string name="quit">Quit</string>
    <string name="restart">Restart</string>
    <string name="game_over">Game Over</string>
    <string name="play_again">Play Again</string>
    <string name="game_volume">Game Volume</string>
    <string name="music_volume">Music Volume</string>
    <string name="return_to_menu">Return to Menu</string>
    <string name="game_statistics">Game Statistics</string>
    <string name="equipment_status">Status:</string>
    <string name="equipment_equip">Click to Equip</string>
    <string name="equipment_equipped">Equipped</string>
    <string name="equipment_buy">Buy for %1$s Coins</string>
    <string name="endless">Endless</string>
    <string name="easy_difficulty">Recruit</string>
    <string name="medium_difficulty">Pilot</string>
    <string name="hard_difficulty">Captain</string>
    <string name="go">Let\'s Go!</string>
    <string name="available_gamemodes">Available GameModes</string>
    <string name="highscore">Congrats! HIGHSCORE!!!</string>
    <string name="highscore_equals">Highscore: %1$s</string>
    <string name="default_equipped_states">
        LASER_BULLET:EQUIPPED,ION_BULLET:LOCKED,PLASMA_BULLET:LOCKED,PLUTONIUM_BULLET:LOCKED,ROCKET_DEFAULT:EQUIPPED,ARMOR_DEFAULT:EQUIPPED
    </string>
    <string name="default_lifetime_stats">
        ALIENS_KILLED:INTEGER:0,
        GAMES_PLAYED:INTEGER:0,
        TIME_PLAYED:LONG:0,
        DISTANCE_TRAVELED:LONG:0,
        HIGH_SCORE:LONG:0,
        COINS_COLLECTED:LONG:0,
        POINTS_EARNED:LONG:0
    </string>
    <!-- Define animations (see AnimCache.java and SpriteAnimation.java) -->
    <string name="SPACESHIP_MOVE">2:5:5:true</string>
    <string name="SPACESHIP_FIRE_ROCKET">3:16:8:8:false</string>
    <string name="SPACESHIP_EXPLODE">8:5:5:5:5:5:5:5:5:false</string>>
    <string name="COIN_SPIN">6:10:10:10:10:10:10:true</string>
    <string name="ROCKET_MOVE">2:3:3:true</string>
    <string name="PROJECTILE_EXPLODE">4:1:1:1:1:false</string>
    <string name="EXPLOSION_1">8:2:2:2:2:2:2:2:2:false</string>
</resources>
