<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- dialog's title, displays name of selected GameMode -->
    <com.plainsimple.spaceships.view.FontTextView
        style="@style/GalaxyMonkey.TextStyle"
        android:id="@+id/title"
        android:textSize="40dp"
        android:text="@string/endless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <!-- horizontal linearlayout containing three equally-sized and spaced buttons for selecting
    difficulty level -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <com.plainsimple.spaceships.view.FontButton
            style="@style/GalaxyMonkey.ButtonTextStyle"
            android:id="@+id/set_easy"
            android:text="@string/easy_difficulty"
            android:background="@drawable/difficultybutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_margin="3dp"
            android:layout_weight="1"/>
        <com.plainsimple.spaceships.view.FontButton
            style="@style/GalaxyMonkey.ButtonTextStyle"
            android:id="@+id/set_medium"
            android:text="@string/medium_difficulty"
            android:background="@drawable/difficultybutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_margin="3dp"
            android:layout_weight="1"/>
        <com.plainsimple.spaceships.view.FontButton
            style="@style/GalaxyMonkey.ButtonTextStyle"
            android:id="@+id/set_hard"
            android:text="@string/hard_difficulty"
            android:background="@drawable/difficultybutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_margin="3dp"
            android:layout_weight="1" />
    </LinearLayout>
    <com.plainsimple.spaceships.view.FontButton
        style="@style/GalaxyMonkey.ButtonTextStyle"
        android:id="@+id/start_game"
        android:text="@string/go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>