<?xml version="1.0" encoding="utf-8"?>
 <!-- Displays foreground of title and buttons -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <!-- Displays background todo: behind relative layout-->
    <com.plainsimple.spaceships.view.MainMenuBackground
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"/>
    <!-- "Spaceships" Title -->
    <com.plainsimple.spaceships.view.FontTextView
        style="@style/GalaxyMonkey"
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="100sp"
        android:layout_marginTop="10dp"
        android:textColor="#FFFFFF"
        android:text="@string/app_name"
        android:gravity="center" />
    <!-- Play Button -->
    <com.plainsimple.spaceships.view.FontButton
        style="@style/Andromeda.MenuStyle"
        android:id="@+id/playbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:alpha="0"
        android:layout_centerHorizontal="true"
        android:text="@string/button_play"
        android:onClick="onPlayPressed"/>
    <!-- Store Button -->
    <!-- or style="?android:attr/borderlessButtonStyle" ? -->
    <com.plainsimple.spaceships.view.FontButton
        style="@style/Andromeda.MenuStyle"
        android:id="@+id/storebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/playbutton"
        android:alpha="0"
        android:text="@string/button_store"
        android:onClick="onStorePressed"/>
    <!-- Stats Button -->
    <com.plainsimple.spaceships.view.FontButton
        style="@style/Andromeda.MenuStyle"
        android:id="@+id/statsbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/storebutton"
        android:alpha="0"
        android:text="@string/button_stats"
        android:onClick="onStatsPressed"/>
</RelativeLayout>