<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pause_dialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/dialog_shape">
    <!-- Title -->
    <com.plainsimple.spaceships.view.FontTextView
        style="@style/GalaxyMonkey.TextStyle"
        android:layout_width="fill_parent"
        android:textSize="60dp"
        android:layout_marginTop="10dp"
        android:text="@string/paused"
        android:includeFontPadding="false" />
    <!-- layout for labels and seekbars, which should share the layout evenly -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/labels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:paddingLeft="10dp">
            <com.plainsimple.spaceships.view.FontTextView
                style="@style/GalaxyMonkey.TextStyle"
                android:id="@+id/gamevolume_display"
                android:textSize="25dp"
                android:text="@string/game_volume" >
            </com.plainsimple.spaceships.view.FontTextView>
            <com.plainsimple.spaceships.view.FontTextView
                style="@style/GalaxyMonkey.TextStyle"
                android:id="@+id/musicvolume_display"
                android:textSize="25dp"
                android:text="@string/music_volume" >
            </com.plainsimple.spaceships.view.FontTextView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/seekbars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="100">
            <SeekBar
                android:id="@+id/gamevolume_selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100">
            </SeekBar>
            <SeekBar
                android:id="@+id/musicvolume_selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100">
            </SeekBar>
        </LinearLayout>
    </LinearLayout>
    <!-- restart button -->
    <!-- Resume Button -->
    <com.plainsimple.spaceships.view.FontButton
        style="@style/GalaxyMonkey.ButtonTextStyle"
        android:id="@+id/resumebutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tap_to_resume"/>
    <!-- container for restart and quit buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- Restart Button -->
        <com.plainsimple.spaceships.view.FontButton
            style="@style/GalaxyMonkey.ButtonTextStyle"
            android:id="@+id/restartbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:text="@string/restart"/>
        <!-- Quit Button -->
        <com.plainsimple.spaceships.view.FontButton
            style="@style/GalaxyMonkey.ButtonTextStyle"
            android:id="@+id/quitbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:text="@string/quit"/>
    </LinearLayout>
</LinearLayout>