<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_shape">
    <!-- Title -->
    <com.plainsimple.spaceships.view.FontTextView
        android:id="@+id/title_message"
        style="@style/GalaxyMonkey.TextStyle"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:textSize="60dp"
        android:lines="1"
        android:layout_marginTop="10dp"
        android:text="GameOver" />
    <!-- visual display of number of stars player earned for the game -->
    <com.plainsimple.spaceships.view.StarsEarnedView
        android:id="@+id/starsearned_display"
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>
    <!-- optional small italicized text field for another message (default to GONE) -->
    <com.plainsimple.spaceships.view.FontTextView
        android:id="@+id/message"
        style="@style/GalaxyMonkey.TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="italic"
        android:lines="1"
        android:visibility="gone"/>
    <!-- displays round score -->
    <com.plainsimple.spaceships.view.FontTextView
        android:id="@+id/game_score"
        style="@style/GalaxyMonkey.TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"/>
    <!-- made visible if this game was a highscore. "Gone" by default -->
    <com.plainsimple.spaceships.view.FontTextView
        android:id="@+id/highscore"
        style="@style/GalaxyMonkey.TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/highscore"
        android:visibility="gone"/>
    <com.plainsimple.spaceships.view.FontTextView
        android:id="@+id/other_stats"
        style="@style/GalaxyMonkey.TextStyle"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <!-- Layout for the "Play Again" and "Quit" buttons -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.plainsimple.spaceships.view.FontButton
            style="@style/GalaxyMonkey.ButtonTextStyle"
            android:id="@+id/restartbutton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:layout_marginRight="0dp"
            android:text="@string/play_again" />
        <com.plainsimple.spaceships.view.FontButton
            style="@style/GalaxyMonkey.ButtonTextStyle"
            android:id="@+id/quitbutton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:layout_marginLeft="0dp"
            android:text="@string/quit" />
    </LinearLayout>
</LinearLayout>